Eliminazione ed aggiornamento codice.