@@ -12,7 +12,7 @@ import java.io.*;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.Files;
@@ -31,40 +31,39 @@ public class Download {
     private static List<CasiLegali> record = new ArrayList<>();     //Lista di oggetti CasiLegali
     private final static String TAB_DELIMITER = "\t";
     private static List<Map> Lista = new ArrayList();               //Lista per i Metadata
-    static List<String> time = new ArrayList<>();                   //lista per i valori durante i vari anni
+    private static List<String> anni = new ArrayList<>();           //lista per i valori durante i vari anni
 
     /**
      * Costruttore della classe Download
      *Effettua il download e il parsing del tsv
      */
     public Download() throws IOException {
-        String fileTSV = "dataset.tsv";                         //file in cui salvare il file tsv
+
         for(int i = 0; i < CasiLegali.differenza_anni; i++)     //Inizializzo il vettore tempo
-            time.add(Integer.toString((2008+i)));               //riempio la lista con gli anni gestiti
-        if (Files.exists(Paths.get(fileTSV)))                   //verifico l'esistenza del file in locale
+            anni.add(Integer.toString((2008+i)));               //riempio la lista con gli anni gestiti
+        String fileTSV = "dataset.tsv";                         //file in cui salvare il file tsv
+        if (Files.exists(Paths.get(fileTSV)))   {                //verifico l'esistenza del file in locale
             System.out.println("Dataset caricato da un file locale"); //carica il file da locale se esiste
-        else {
+    } else {
             String url = "http://data.europa.eu/euodp/data/api/3/action/package_show?id=7SKEdXk2i1tLAgY0rDBbA";
             try {
                 URLConnection openConnection = new URL(url).openConnection();   //apro connessione ad url della mail
                 openConnection.addRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20100101 Firefox/25.0"); //aggiungo user-aget alla connessione
-                InputStream in = openConnection.getInputStream();
-
-                String data = "";
+                InputStream in = openConnection.getInputStream();               //prende in input ciò che arriva dall'url
+                StringBuilder data = new StringBuilder();
                 String line = "";
                 try {   //lettura JSON e salvataggio su stringa
                     InputStreamReader inR = new InputStreamReader( in );
                     BufferedReader buf = new BufferedReader( inR );
-
                     while ( ( line = buf.readLine() ) != null ) {
-                        data += line;
+                        data.append(line);
                         System.out.println( line );
                     }
                 } finally {
                     in.close();
                 }
                 //Conversione StringBuilder in oggetto JSON
-                JSONObject obj = (JSONObject) JSONValue.parseWithException(data);
+                JSONObject obj = (JSONObject) JSONValue.parseWithException(data.toString());
                 JSONObject objI = (JSONObject) (obj.get("result"));
                 JSONArray objA = (JSONArray) (objI.get("resources"));
 
@@ -95,23 +94,9 @@ public class Download {
      * @param url url del sito dal quale scaricare il file
      * @param fileName nome del file
      */
-    private static void downloadTSV(String url, String fileName) throws Exception {
-        HttpURLConnection openConnection = (HttpURLConnection) new URL(url).openConnection();
-        openConnection.addRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20100101 Firefox/25.0");
-        InputStream in = openConnection.getInputStream();
-        String data = "";
-        String line = "";
-        try {
-            if(openConnection.getResponseCode() >= 300 && openConnection.getResponseCode() < 400) {
-                downloadTSV(openConnection.getHeaderField("Location"),fileName);
-                in.close();
-                openConnection.disconnect();
-                return;
-            }
+    private static void downloadTSV(String url, String fileName) throws Exception{
+        try(InputStream in = URI.create( url ).toURL().openStream() ) {
             Files.copy(in, Paths.get(fileName));
-            System.out.println("File size " + Files.size(Paths.get(fileName)));
-            } finally {
-                in.close();
         }
     }
 
@@ -121,26 +106,24 @@ public class Download {
      * @param fileTSV  Stringa con il nome del file tsv
      */
     private void Parsing(String fileTSV){
-        try(BufferedReader bRead = new BufferedReader(new FileReader(fileTSV))){
-            bRead.readLine();                  //Legge una riga a vuoto per saltare l'intestazione
+        try(BufferedReader bRead = new BufferedReader(new FileReader(fileTSV))){  //inizializza il buffer per il parsing
+            bRead.readLine();        //Legge una riga a vuoto per saltare l'intestazione
             String linea;
             while((linea = bRead.readLine()) != null) {                          //Ciclo che continua fintanto che non trova una linea nulla
                 linea = linea.replace(",", TAB_DELIMITER);                //Sostituisce le virgole con i tab "\t"
                 linea = linea.replace(":","0");               //Sostituisce i ":" con "0"
-                String[] lineaSplittata = linea.trim().split(TAB_DELIMITER);    //uso split per dividere la riga in corrispondenza dei separatori
-                String leg_case = lineaSplittata[0].trim();                     //Trim toglie gli spazi prima e dopo la stringa
-                String unit = lineaSplittata[1].trim();
-                String leg_stat = lineaSplittata[2].trim();
-                String geo = lineaSplittata[3].trim();
+                String[] lineaSeparata = linea.trim().split(TAB_DELIMITER);    //uso split per dividere la riga in corrispondenza dei separatori
+                //prendo i valori per ogni campo da lineaSeparata
+                String leg_case = lineaSeparata[0].trim();                     //Trim toglie gli spazi prima e dopo la stringa
+                String unit = lineaSeparata[1].trim();
+                String leg_stat = lineaSeparata[2].trim();
+                String geo = lineaSeparata[3].trim();
                 float[] time = new float[CasiLegali.differenza_anni];                   //vettore di float che conterrà i valori nei vari anni
                 for(int i = 0; i < CasiLegali.differenza_anni; i++) {
-                    if (4 + i < lineaSplittata.length)                                  //Gestione errore java.lang.ArrayIndexOutOfBoundsException
-                        time[i] = Float.parseFloat(lineaSplittata[4 + i].trim());       //Inserisce i valori della tabella dentro il vettore
-                    else
-                        time[i] = 0;                                                      //Per i valori che non ci sono dopo lineaSplittata aggiunge "0"
+                        time[i] = Float.parseFloat(lineaSeparata[4 + i].trim());       //Inserisce i valori della tabella dentro il vettore
                 }
-                CasiLegali oggettoParsato = new CasiLegali(leg_case, leg_stat, unit, geo, time);
-                record.add(oggettoParsato);         //Aggiungo oggettoParsato alla lista
+                CasiLegali nuovoOggetto = new CasiLegali(leg_case, leg_stat, unit, geo, time);
+                record.add(nuovoOggetto);         //Aggiungo nuovoOggetto alla lista
             }
         } catch (IOException e){
             e.printStackTrace();
@@ -179,12 +162,21 @@ public class Download {
     }
 
     /**
+     * Metodo che restituisce il record all'indice i
+     *
+     */
+
+    public CasiLegali getData(int i){
+        if(i < record.size()) return record.get(i);
+        else throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Oggetto di indice " + i + " non esiste!");
+    }
+    /**
      * Metodo che restituisce una lista di String contenente gli anni
      *
      * @return anni
      */
     public List getTime(){
-        return time;
+        return anni;
     }
 
     /**
@@ -193,21 +185,17 @@ public class Download {
      * @return Lista
      */
     public List<Map> getMetadata(){
-
         return Lista;
     }
 
     /**
-     * Metodo che restituisce il record all'indice i
+     * Metodo che restituisce la lista dei valori relativi ad un singolo campo
      *
+     * @param nomeCampo
+     * @return
      */
-    public CasiLegali getData(int i){
-        if(i < record.size()) return record.get(i);
-        throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Oggetto di indice " + i + " non esiste!");
-    }
 
-
-    public List getField(String nomeCampo) {
+    public List getCampo(String nomeCampo) {
         List<Object> listField = new ArrayList<>(); //inizializzo lista che conterrà i valori del campo
         try {
             /*
@@ -215,7 +203,7 @@ public class Download {
             In questo caso verifico se sia uno degli anni all'interno del vettore time
             Se questo è vero allora inserisco dentro dentro "ob" i valori relativi al nome del campo inserito
              */
-            if(time.contains(nomeCampo)){
+            if(anni.contains(nomeCampo)){
                 for(CasiLegali casi : record){
                     Object ob= casi.getTime()[Integer.parseInt(nomeCampo)-2000]; //considero solo l'elemento che mi interessa del metodo get
                     listField.add(ob);
@@ -250,36 +238,19 @@ public class Download {
      * @return lista delle statistiche
      */
 
-    public List<Map> getAllFieldStatistics() {
-        Field[] fields = CasiLegali.class.getDeclaredFields();
-        List<Map> list = new ArrayList<>();
+    public List<Map> getAllStatisticheCampo() {
+        Field[] fields = CasiLegali.class.getDeclaredFields(); //elenco degli attributi della classe
+        List<Map> list = new ArrayList<>(); //lista di mappe che conterrà le statistiche
         for(Field campo : fields){
-            String fieldName = campo.getName();
-            if(fieldName.equals("record"))
+            String NomeCampo = campo.getName(); //estrae il nome del campo corrente
+            if(NomeCampo.equals("record"))
                 for(int i = 0; i < CasiLegali.differenza_anni; i++)
-                    list.add(Statistiche.getAllStatistics(fieldName, getField(fieldName)));
+                    list.add(Statistiche.getAllStatistics(NomeCampo, getCampo(NomeCampo)));
             else
-                list.add(Statistiche.getAllStatistics(fieldName, getField(fieldName)));
+                list.add(Statistiche.getAllStatistics(NomeCampo, getCampo(NomeCampo)));
         }
         return list;
     }
 
-    /**
-     * Metodo che restituisce il record filtrato rispetto al nome del campo, operatore e reference
-     *
-     * @param nameField nome del campo passato dall'utente
-     * @param operator operatore passato dall'utente
-     * @param reference oggetto passato dall'utente
-     * @return restituisce la lista con gli oggetti filtrati
-     */
-
-    public List<CasiLegali> getFilteredRecord(String nameField, String operator, Object reference) {
-        List<Integer> filteredList = Filtri.filtra(getField(nameField), operator, reference);
-        List<CasiLegali> filtered = new ArrayList<>();
-        for (int i : filteredList) {
-            filtered.add(record.get(i));
-        }
-        return filtered;
-    }
 }
 
